data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1214.wast
;; 5. **Test Description**: Scenario where `br_table` with multiple valid indices, followed by an invalid index, confirms the default label is triggered for the invalid part.    - **Constraint**: Validates that a sequence of valid indices does not affect the handling of subsequent invalid indices and defaults accordingly.    - **Edge Case Relation**: Tests variable indices within a single table for proper handling and consistent default behavior.

(assert_invalid
 (module
  (func $br_table_with_invalid_index
   (block
    (br_table 0 1 2 0 3 (i32.const 4))
   )
  )
 )
 "invalid label"
)